--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "grunt": "^1.0.1",
     "grunt-browserify": "^5.0.0",
     "grunt-contrib-watch": "^1.0.0"
+  },
+  "dependencies": {
+    "lodash.assignin": "^4.0.8",
+    "lodash.isfunction": "^3.0.8",
+    "lodash.keys": "^4.0.6"
   }
 }
